@@ -72,11 +72,10 @@ namespace mln
     Function();
     Function(const Function&);
 
-    /* Workaround for Apple's llvm-gcc 4.2.1 (Mac OS Lion 10.7.1)
+    /* Workaround for Apple's llvm-gcc 4.2.1 (Mac OS X Lion 10.7.1)
 
        Apple's llvm-gcc has a bug causing memmove() errors if the copy
-       constructor is not declared along with operator=().
-     */
+       constructor is not declared along with operator=().  */
     Function& operator=(const Function&);
   };
 
@@ -231,7 +230,7 @@ namespace mln
 
   template <typename E>
   inline
-  Function&
+  Function<E>&
   Function<E>::operator=(const Function&)
   {
     return *this;
